feat: upload multipart/form-data - add metadata
